@@ -22,80 +22,85 @@
 import os
 
 __version__ = "$Rev$"
-
 directory = os.path.split(os.path.abspath(__file__))[0]
 fontpath = os.path.join(directory, 'Vera.ttf')
 logopath = directory
-
-fluendoLogoPath = os.path.join(logopath, 'fluendo.36x36.png')
-ccLogoPath = os.path.join(logopath, 'cc.36x36.png')
-xiphLogoPath = os.path.join(logopath, 'xiph.36x36.png')
-
 TEXT_XOFFSET = 6
 TEXT_YOFFSET = 6
 WIDTH = 36
-BORDER = 8
+BORDER = 4
 FONT_SIZE = 22
 
 
-def generate_overlay(filename, text, show_fluendo, show_cc, show_xiph,
-                     width, height):
+def generateOverlay(filename,
+                    text,
+                    showFlumotion,
+                    showCC,
+                    showXiph,
+                    width, height):
+    """Generate an transparent image with text + logotypes rendered on top
+    of it suitable for mixing into a video stream
+    @param filename: name of the filename to generate
+    @type filename: str
+    @param text: text to put in the top left corner
+    @type text: str
+    @param showFlumotion: if we should show the flumotion logo
+    @type showFlumotion: bool
+    @param showCC: if we should show the Creative Common logo
+    @type showCC: bool
+    @param showXiph: if we should show the xiph logo
+    @type showXiph: bool
+    @param width: width of the image to generate
+    @type width: int
+    @param height: height of the image to generate
+    @type height: int
+    @returns: if images or if text overflowed
+    @rtype: 2 sized tuple of booleans
+    """
     from PIL import Image
-    from PIL import ImageChops
     from PIL import ImageDraw
     from PIL import ImageFont
-    from PIL import ImageOps
 
     image = Image.new("RGBA", (width, height))
     draw = ImageDraw.Draw(image) # inheriting color mode
 
+    subImages = []
+    if showXiph:
+        subImages.append(os.path.join(logopath, 'xiph.36x36.png'))
+    if showCC:
+        subImages.append(os.path.join(logopath, 'cc.36x36.png'))
+    if showFlumotion:
+        subImages.append(os.path.join(logopath, 'fluendo.36x36.png'))
+
+    imagesOverflowed = False
+
+    offsetX = BORDER
+    for subPath in subImages:
+        sub = Image.open(subPath)
+        subX, subY = sub.size
+        offsetY = height - subY - BORDER
+        image.paste(sub, (offsetX, offsetY), sub)
+        if (offsetX + subX) > width:
+            imagesOverflowed = True
+        offsetX += subX + BORDER
+
+    textOverflowed = False
     if text:
         font = ImageFont.truetype(fontpath, FONT_SIZE)
         draw.text((TEXT_XOFFSET+2, TEXT_YOFFSET+2),
                   text, font=font, fill='black')
         draw.text((TEXT_XOFFSET, TEXT_YOFFSET),
                   text, font=font)
-
-    # How many logos we're going to show
-    logos = len([i for i in (show_fluendo, show_cc, show_xiph) if i]) - 1
-
-    # This is really *NOT* the optimal way of doing this.
-    # We should really find out a better way of adding an image on
-    # another image (with an offset)
-
-    imax = max(width, height)
-    y_corr = -(abs(width - height) + WIDTH + BORDER)
-
-    if show_xiph:
-        xiph = Image.open(xiphLogoPath)
-        xiph = ImageOps.expand(xiph, imax)
-        xiph = ImageChops.offset(xiph, -width + (WIDTH*logos), y_corr)
-        image = ImageChops.add_modulo(image, xiph)
-        logos -= 1
-
-    if show_cc:
-        cc = Image.open(ccLogoPath)
-        cc = ImageOps.expand(cc, imax)
-        cc = ImageChops.offset(cc, -width + (WIDTH*logos), y_corr)
-        image = ImageChops.add_modulo(image, cc)
-        logos -= 1
-
-    if show_fluendo:
-        fluendo = Image.open(fluendoLogoPath)
-        fluendo = ImageOps.expand(fluendo, imax)
-        fluendo = ImageChops.offset(fluendo, -width, y_corr)
-        image = ImageChops.add_modulo(image, fluendo)
+        textWidth = draw.textsize(text, font=font)[0] + TEXT_XOFFSET
+        if textWidth > width:
+            textOverflowed = True
 
     if os.path.exists(filename):
         os.unlink(filename)
 
     image.save(filename, 'png')
 
-    if text:
-        return (draw.textsize(text, font=font)[0] + TEXT_XOFFSET > width)
-    else:
-        return False
+    return imagesOverflowed, textOverflowed
 
 if __name__ == '__main__':
-    #generate_overlay('test.png', 'Testing', True, True, True, 320, 240)
-    generate_overlay('test.png', 'Testing', True, True, True, 320, 240)
+    generateOverlay('test.png', 'Testing', True, True, True, 128, 196)
